--- a/socketChat/nbproject/private/private.properties
+++ b/socketChat/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Lucimar\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\P\u00f3s Gradua\u00e7\u00e3o\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
