--- a/socketChatView/nbproject/project.properties
+++ b/socketChatView/nbproject/project.properties
@@ -80,7 +80,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=socketchatview.SocketChatView
+javafx.main.class=br.cefetmg.inf.lpii.view.SocketChatView
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
