turns proxy into a normal class, not a thread

--- a/socketChatView/nbproject/project.properties
+++ b/socketChatView/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/socketChatView.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.socketChat.jar=../socketChat/dist/socketChat.jar
 file.reference.socketChatView.jar=dist/socketChatView.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -36,7 +37,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.socketChatView.jar}
+    ${file.reference.socketChatView.jar}:\
+    ${file.reference.socketChat.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
