--- a/socketChat/nbproject/project.properties
+++ b/socketChat/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=socketchat.SocketChat
+main.class=br.cefetmg.inf.lpii.server.Servidor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
